# gravity

./: .gitignore  CMakeLists.txt  README.md  TODO.md  app.cpp  app.h  circle_buffer.h  colors.h  gravity_point.h  main.cpp  random-stuff-that-works-nicely  sf_utils.h  trace.h
binaries/: readme.md
binaries/shaders/: alphaFadeOff.vert  radial-gradient.frag
shaders/: default.vert  radial-gradient.frag
shape/: LineShape.cpp  LineShape.h
